--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
   "scripts": {
     "dev": "node --env-file=.env.dev --import=tsx server.ts",
     "build": "rimraf ./dist && tsc && tsc-alias",
-    "start": "node --env-file=.env.prod  dist/server.js",
+    "start": "node  dist/server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write ."
   },
+  "engines": {
+    "node": "24.0.2"
+  },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.2",
-    "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.21",
