feat(jest): add jest test in project
Co-authored-by: Minh Tri <nguyenminhtri1808t@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "types": ["jest", "node"]
   },
   "files": ["src/type.d.ts"],
   "include": ["*"]
