--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,8 +19,8 @@ services:
     container_name: lapbee_mongodb_prod
     env_file: '.env.prod'
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_PROD_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PROD_PASSWORD}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD
     ports:
       - '27017:27017'
     volumes:
