modifie(CI-Step): fix npm script run test development environment
Co-authored-by: Minh Tri <nguyenminhtri1808t@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,8 @@ jobs:
       - name: Run jest tests
         run: npm run test
 
-      - name: Run development
-        run: npm run dev
+      - name: Run test development environment
+        run: npm run dev:test
 
       - name: Shutdown services
         if: always()
