fix(workflow): miss argument in step build image in test compose production
Co-authored-by: Minh Tri <nguyenminhtri1808t@gmail.com>

--- a/.github/workflows/test-compose-production.yml
+++ b/.github/workflows/test-compose-production.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build docker file
         run: |
-          docker build -t nguyenminhtri1808t/lapbee_ecommerce_backend:latest
+          docker build -t nguyenminhtri1808t/lapbee_ecommerce_backend:latest .
 
       - name: Start Docker Compose
         run: |
