fix(workflow): miss argument env file in docker compose ps
Co-authored-by: Minh Tri <nguyenminhtri1808t@gmail.com>

--- a/.github/workflows/test-compose-production.yml
+++ b/.github/workflows/test-compose-production.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Wait for services
         run: |
           sleep 10
-          docker compose -f docker-compose.prod.yml ps
+          docker compose -f docker-compose.prod.yml --env-file=.env.prod ps
 
       - name: Check containers health status
         run: |
