--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -48,7 +48,7 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       # For Let's Encrypt/Certbot setup, you'd uncomment these and potentially add certbot service
-      - ./ssl:/etc/nginx/certs
+      - ./.ssl:/etc/nginx/certs
     ports:
       - '80:80'
       - '443:443'
