--- a/.github/workflows/test-compose-production.yml
+++ b/.github/workflows/test-compose-production.yml
@@ -2,7 +2,7 @@ name: Test Docker Compose on Deploy Production
 
 on:
   pull_request:
-    branches: [test]
+    branches: [main, develop]
     paths:
       - 'docker-compose.prod.yml'
       - 'Dockerfile'
