--- a/.github/workflows/cd-on-main.yml
+++ b/.github/workflows/cd-on-main.yml
@@ -87,7 +87,8 @@ jobs:
 
   deploy-server:
     name: SSH Deploy to server
-    needs: [build-and-push-image, call-test-compose]
+    needs: check-prod-files-changed
+    if: needs.check-prod-files-changed.outputs.skip_deploy == 'false'
     runs-on: ubuntu-latest
 
     steps:
