fix(workflow): fix job create pull request to deploy
Co-authored-by: Minh Tri <nguyenminhtri1808t@gmail.com>

--- a/.env.prod.example
+++ b/.env.prod.example
@@ -2,9 +2,12 @@
 PORT=
 
 # MONGODB
-MONGO_PROD_USERNAME=
+MONGO_USERNAME=
 MONGODB_URI=
-MONGO_PROD_PASSWORD=
+MONGO_PASSWORD=
+MONGO_SOURCE_AUTH=
+MONGO_DATABASE=
+MONGO_HOST=
 
 # REDIS
 REDIS_HOST=
