fix(workflow): fix workflow
Co-authored-by: Minh Tri <nguyenminhtri1808t@gmail.com>

--- a/.github/workflows/cd-on-main.yml
+++ b/.github/workflows/cd-on-main.yml
@@ -92,7 +92,7 @@ jobs:
 
           git add docker-compose.prod.yml .env.prod.example nginx/
           git commit -m "chore: sync prod config"
-
+          git push origin temp/pr-for-deploy
       - name: Create PR
         uses: peter-evans/create-pull-request@v6
         with:
