test(workflow): test workflow create pull request to deploy
Co-authored-by: Minh Tri <nguyenminhtri1808t@gmail.com>

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,6 +11,7 @@ server {
   server_name lapbee.store www.lapbee.store;
 
   # SSL Config (Cloudflare Origin Certificate)
+  # SSL Config (Cloudflare Origin Certificate)
   ssl_certificate /etc/nginx/certs/origin.pem;
   ssl_certificate_key /etc/nginx/certs/origin.key;
   ssl_protocols TLSv1.2 TLSv1.3;
