feat(redis): implement ioredis connection to redis service
Co-authored-by: Minh Tri <nguyenminhtri1808t@gmail.com>

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@jest/globals": "^29.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.2",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
