--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       - redis_data:/data
     ports:
-      - '6379:6379'
+      - '${REDIS_PORT}:6379'
     restart: unless-stopped
 # --------------------
 # Volumes for data persistence
