--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: Lapbee Ecommerce Backend Pipeline CI
 on:
   pull_request:
     branches: ['main', 'develop']
+  push:
+    branches: ['main', 'develop']
   workflow_dispatch:
 
 jobs:
