--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/qs": "^6.14.0",
     "@types/uuid": "^10.0.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jest": "^28.11.0",
@@ -64,5 +65,10 @@
     "slugify": "^1.6.6",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
