--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["jwtid", "sadd", "setex", "sismember", "srem", "virtuals", "zalo"]
+  "cSpell.words": ["bullmq", "jwtid", "sadd", "setex", "sismember", "srem", "virtuals", "zalo"]
 }
