--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.13",
     "@types/node": "^22.15.21",
     "@types/nodemailer": "^6.4.17",
     "@types/qs": "^6.14.0",
+    "@types/streamifier": "^0.1.2",
     "@types/uuid": "^10.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.27.0",
@@ -53,6 +55,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bullmq": "^5.53.0",
+    "cloudinary": "^2.6.1",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.6.1",
@@ -60,9 +63,12 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "qs": "^6.14.0",
+    "sharp": "^0.34.2",
     "slugify": "^1.6.6",
+    "streamifier": "^0.1.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zod": "^3.25.42"
