--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "node --env-file=.env.dev --import=tsx server.ts",
+    "dev": "node --watch --env-file=.env.dev --import=tsx server.ts",
     "dev:test": "node --env-file=.env.dev --import=tsx scripts/dev-test.ts",
     "build": "rimraf ./dist && tsc && tsc-alias",
     "start": "node  dist/server.js",
