feat(src): developing api create product variant

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,38 @@
 {
-  "cSpell.words": ["bullmq", "jwtid", "Lapbee", "sadd", "setex", "sismember", "srem", "streamifier", "virtuals", "zalo"]
+  "cSpell.words": [
+    "biến",
+    "bullmq",
+    "chưa",
+    "công",
+    "Đang",
+    "định",
+    "được",
+    "hàng",
+    "hiển",
+    "hiện",
+    "hoàn",
+    "jwtid",
+    "khai",
+    "khỏi",
+    "Không",
+    "Lapbee",
+    "nghĩa",
+    "Ngừng",
+    "phẩm",
+    "phép",
+    "sadd",
+    "setex",
+    "sismember",
+    "soạn",
+    "srem",
+    "streamifier",
+    "thảo",
+    "thời",
+    "tình",
+    "toàn",
+    "trạng",
+    "trước",
+    "virtuals",
+    "zalo"
+  ]
 }
