--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@eslint/js": "^9.27.0",
     "@jest/globals": "^29.7.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.2",
     "@types/ioredis": "^4.28.10",
@@ -57,6 +58,7 @@
     "bcrypt": "^6.0.0",
     "bullmq": "^5.53.0",
     "cloudinary": "^2.6.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
